# device-manager

./: .gitignore  README.md  Tirocinio-Dashboard-Rebuild.md  backup-dm-dev  docker-compose.yml  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: alarm.py  asset.py  telemetry.py
backend/app/routers/: alerts.py  assets.py  telemetry.py
backend/app/schemas/: alerts.py  asset.py  filters.py  telemetry.py
dm-front/: dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dm-front/src/: index.css
dm-front/src/components/layout/: Header.tsx  MachineBar.tsx  Sidebar.tsx  TimeRangeBar.tsx
dm-front/src/components/panels/: ActiveAlertsPanel.tsx  AlertHistoryPanel.tsx  DataSenderPanel.tsx  EdgeStatusPanel.tsx  IgnitionPanel.tsx  KpiBar.tsx  PanelWrapper.tsx  ParquetHeatmapPanel.tsx  PcStatsPanel.tsx  RangeSwitcher.tsx
dm-front/src/context/: MachineContext.tsx  TelemetryContext.tsx  TimeRangeContext.tsx
dm-front/src/data/: mockTree.ts
dm-front/src/hooks/: useApiTree.ts  useMachine.ts  useTelemetry.ts  useTimeRange.ts  useTimeWindow.ts
dm-front/src/pages/: Dashboard.tsx
dm-front/src/providers/: machine-provider.tsx  telemetry-provider.tsx  time-range-provider.tsx
dm-front/src/styles/: dashboard.css
docker/: init-db.sh
docs/: DATABASE_ARCHITECTURE.md  DIAGRAMS.md  PROJECT_OVERVIEW.md  README.md  REQUIREMENTS_AND_FLOW.md
